expanded column name recognition

--- a/db_searcher.ipynb
+++ b/db_searcher.ipynb
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a24c7e01a2547a59d1717a70c2d4f90",
+       "model_id": "3b3b1b4b7529470cb4f54f8e778172b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,7 +30,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(Dropdown(description='condition:', index=5, options=('Select', 'Sort', 'Filter', 'Join', 'Export', 'Plot'), value='Plot'), Button(description='Add', style=ButtonStyle()), Button(description='Remove', style=ButtonStyle()))), HBox(children=(Text(value='geodata', description='csv:', placeholder='name of csv to import'), Button(description='Search', style=ButtonStyle()))))),))"
+       "VBox(children=(HBox(children=(Dropdown(description='condition:', options=('Select', 'Sort', 'Filter', 'Join', 'Export', 'Plot'), value='Select'), Button(description='Add', style=ButtonStyle()), Button(description='Remove', style=ButtonStyle()))), HBox(children=(Text(value='', description='csv:', placeholder='name of csv to import'), Button(description='Search', style=ButtonStyle())))))"
       ]
      },
      "metadata": {},
@@ -42,6 +42,13 @@
     "from db_searcher import *\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
