Updated with markdown

--- a/db_searcher_colab.ipynb
+++ b/db_searcher_colab.ipynb
@@ -37,43 +37,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IrRaltotSH45",
+        "colab_type": "text"
+      },
+      "source": [
+        "#DB Searcher - Google Colab edition\n",
+        "\n",
+        "An interactive GUI for selecting, filtering, sorting, joining, plotting, and exporting csv data.\n",
+        "\n",
+        "Author: G Boyer\n",
+        "\n",
+        "Last updated: 1/22/2019"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "soVmAZUASmrQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 1: Load prerequisite modules"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hCk1PYqzaYWt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
-        "!pip install dfply"
+        "#@title <--- click button to load prerequisite modules\n",
+        "!pip install dfply\n",
+        "\n",
+        "print('DB Searcher is ready.')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gYwgXw1STG2T",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 2: Run DB Searcher"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YVBSNIL6dD9X",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
-        "#@title\n",
+        "#@title <--- click button to run DB Searcher\n",
         "### DB searcher ###\n",
         "# An interactive GUI for selecting, filtering,\n",
         "# sorting, joining, and exporting csv data.\n",
         "# Author: Grayson Boyer\n",
         "# Last updated: 12/23/2018\n",
         "\n",
-        "# This code was designed to work in a Python 3 Jupyter notebook\n",
-        "# with the following code in the first cell:\n",
-        "\n",
-        "# from db_searcher import *\n",
-        "# main()\n",
-        "\n",
         "\n",
         "# import packages\n",
-        "\n",
         "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, VBox, Output\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, clear_output\n",
@@ -253,6 +286,57 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4HhS9siUURf5",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Optional: get example csv files\n",
+        "\n",
+        "Explore DB searcher with example files water.csv and water2.csv."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lkWJTo1XSXCk",
+        "colab_type": "code",
+        "colab": {},
+        "cellView": "form"
+      },
+      "source": [
+        "#@title <--- click button to get example csv files\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "print('Retrieving water.csv and water2.csv from github...')\n",
+        "\n",
+        "for example in ['water', 'water2']:\n",
+        "  url = 'https://raw.githubusercontent.com/gmboyer/db_searcher/master/'+example+'.csv'\n",
+        "  df = pd.read_csv(url)\n",
+        "  df.to_csv(example+'.csv', index=False)\n",
+        "  print(example+'.csv is ready.')\n",
+        "\n",
+        "print('Example files are ready.')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wnR1iQmUW93D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
