--- a/db_searcher_colab.ipynb
+++ b/db_searcher_colab.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "db_searcher.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -39,8 +40,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IrRaltotSH45",
-        "colab_type": "text"
+        "id": "IrRaltotSH45"
       },
       "source": [
         "#DB Searcher - Google Colab edition\n",
@@ -49,14 +49,13 @@
         "\n",
         "Author: G Boyer\n",
         "\n",
-        "Last updated: 1/22/2019"
+        "Last updated: October 21, 2020"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "soVmAZUASmrQ",
-        "colab_type": "text"
+        "id": "soVmAZUASmrQ"
       },
       "source": [
         "### Step 1: Load prerequisite modules"
@@ -66,8 +65,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "hCk1PYqzaYWt",
-        "colab_type": "code",
-        "colab": {},
         "cellView": "form"
       },
       "source": [
@@ -76,14 +73,13 @@
         "\n",
         "print('DB Searcher is ready.')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gYwgXw1STG2T",
-        "colab_type": "text"
+        "id": "gYwgXw1STG2T"
       },
       "source": [
         "### Step 2: Run DB Searcher"
@@ -93,9 +89,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "YVBSNIL6dD9X",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
+        "cellView": "form"
       },
       "source": [
         "#@title <--- click button to run DB Searcher\n",
@@ -205,9 +199,10 @@
         "\n",
         "        # load the csv that will be searched as the variable 'data'\n",
         "        try:\n",
-        "            data = pd.read_csv(import_csv_form.value + '.csv')\n",
+        "          data = pd.read_csv(import_csv_form.value + '.csv')\n",
         "        except:\n",
         "            display(widgets.VBox(row_widget_contents + [add_search_vbox]))\n",
+        "            print(\"Could not find file\", import_csv_form.value + '.csv')\n",
         "            print(\"Please specify a valid csv.\")\n",
         "            return\n",
         "\n",
@@ -287,14 +282,13 @@
         "if __name__ == '__main__':\n",
         "    main()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4HhS9siUURf5",
-        "colab_type": "text"
+        "id": "4HhS9siUURf5"
       },
       "source": [
         "### Optional: get example csv files\n",
@@ -306,8 +300,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "lkWJTo1XSXCk",
-        "colab_type": "code",
-        "colab": {},
         "cellView": "form"
       },
       "source": [
@@ -325,20 +317,18 @@
         "\n",
         "print('Example files are ready.')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wnR1iQmUW93D",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wnR1iQmUW93D"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
